mail structure with template

--- a/tanaguru-rest/src/main/resources/messages_fr.properties
+++ b/tanaguru-rest/src/main/resources/messages_fr.properties
@@ -1,2 +1,4 @@
 mail.forgotPasswordSubject = Mot de passe Tanaguru
-mail.forgotPasswordContent = Vous demandez à Tanaguru de réinitialiser votre mot de passe, veuillez suivre ce lien :
+mail.forgotPasswordContent = Vous demandez à Tanaguru de réinitialiser votre mot de passe, veuillez suivre ce lien : 
+mail.auditEnd.body = Félicitations ! \n\nVotre audit du projet p1 s'est terminé avec succès. \n\nLes résultats sont dès à présent consultables ici : url \n\nNe lachez rien! \nTanaguru
+mail.auditEnd.subject = [Tanaguru] Fin de l'audit
