--- a/tanaguru-rest/src/main/resources/messages.properties
+++ b/tanaguru-rest/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
 mail.forgotPasswordSubject = Tanaguru password
 mail.forgotPasswordContent = You ask Tanaguru to reset your password, please follow this link : 
+mail.auditEnd.body = This audit is finished : 
+mail.auditEnd.subject = [Tanaguru] Audit completed
