send email with html template and handle errors

--- a/tanaguru-rest/src/main/resources/messages.properties
+++ b/tanaguru-rest/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 mail.forgotPasswordSubject = Tanaguru password
 mail.forgotPasswordContent = You ask Tanaguru to reset your password, please follow this link : 
-mail.auditEnd.body = This audit is finished : 
+mail.auditEnd.body = Congratulations ! \n\nYour project audit <b> p1 </b> has been successfully completed. \n\nThe results are now available here : <a href="url">url</a> \n\nNever give up ! \nTanaguru
 mail.auditEnd.subject = [Tanaguru] Audit completed
