--- a/tanaguru-rest/src/main/resources/messages_fr.properties
+++ b/tanaguru-rest/src/main/resources/messages_fr.properties
@@ -1,4 +1,4 @@
 mail.forgotPasswordSubject = Mot de passe Tanaguru
-mail.forgotPasswordContent = Vous demandez à Tanaguru de réinitialiser votre mot de passe, veuillez suivre ce lien : 
-mail.auditEnd.body = Félicitations ! \n\nVotre audit du projet p1 s'est terminé avec succès. \n\nLes résultats sont dès à présent consultables ici : url \n\nNe lachez rien! \nTanaguru
-mail.auditEnd.subject = [Tanaguru] Fin de l'audit
+mail.forgotPasswordContent = Vous demandez Ã  Tanaguru de rÃ©initialiser votre mot de passe, veuillez suivre ce lien : 
+mail.auditEnd.body = FÃ©licitations ! <br><br>Votre audit du projet <strong> p1 </strong> s'est terminÃ© avec succÃ¨s. <br><br>Les rÃ©sultats sont dÃ¨s Ã  prÃ©sent consultables ici : <a href="url">url</a> <br><br>Ne lÃ¢chez rien ! <br>Tanaguru
+mail.auditEnd.subject = [Tanaguru] Audit terminÃ©
