--- a/tanaguru-rest/src/main/resources/messages.properties
+++ b/tanaguru-rest/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
 mail.forgotPasswordSubject = Tanaguru password
 mail.forgotPasswordContent = You ask Tanaguru to reset your password, please follow this link : 
-mail.auditEnd.body = Congratulations ! \n\nYour project audit <b> p1 </b> has been successfully completed. \n\nThe results are now available here : <a href="url">url</a> \n\nNever give up ! \nTanaguru
+mail.auditEnd.body = Congratulations ! <br><br>Your project audit <b> domain </b> has been successfully completed. <br><br>The results are now available here : <a href="url">url</a> <br><br>Never give up ! <br>Tanaguru
 mail.auditEnd.subject = [Tanaguru] Audit completed
