--- a/tanaguru-rest/src/main/resources/messages_fr.properties
+++ b/tanaguru-rest/src/main/resources/messages_fr.properties
@@ -1,4 +1,4 @@
 mail.forgotPasswordSubject = Mot de passe Tanaguru
 mail.forgotPasswordContent = Vous demandez à Tanaguru de réinitialiser votre mot de passe, veuillez suivre ce lien : 
-mail.auditEnd.body = Félicitations ! <br><br>Votre audit du projet <strong> p1 </strong> s'est terminé avec succès. <br><br>Les résultats sont dès à présent consultables ici : <a href="url">url</a> <br><br>Ne lâchez rien ! <br>Tanaguru
+mail.auditEnd.body = Félicitations ! <br><br>Votre audit du projet <strong> domain </strong> s'est terminé avec succès. <br><br>Les résultats sont dès à présent consultables ici : <a href="url">url</a> <br><br>Ne lâchez rien ! <br>Tanaguru
 mail.auditEnd.subject = [Tanaguru] Audit terminé
