--- a/tanaguru-rest/src/main/resources/messages_fr.properties
+++ b/tanaguru-rest/src/main/resources/messages_fr.properties
@@ -8,3 +8,5 @@ mail.block.user.attempts.userid = ID utilisateur :
 mail.block.user.attempts.number = Tentative numéro 
 mail.block.user.attempts.lastAttempt = Dernier accès : 
 mail.block.user.attempts.until = Bloqué jusqu'à : 
+mail.block.user.attempts.adminSubject = Blocage d'un compte utilisateur
+mail.block.user.attempts.subject = Blocage de votre compte utilisateur
