--- a/tanaguru-rest/src/main/resources/messages.properties
+++ b/tanaguru-rest/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 mail.forgotPasswordSubject = [Tanaguru] Reset password
 mail.forgotPasswordContent = You ask Tanaguru to reset your password, please follow this link : <a href="link">link</a> <br><br>Tanaguru
-mail.auditEnd.body = Congratulations ! <br><br>Your project audit <b> domain </b> has been successfully completed. <br><br>The results are now available here : <a href="url">url</a> <br><br>Never give up ! <br>Tanaguru
+mail.auditEnd.body = Congratulations ! <br><br>Your project audit <b> domain </b> has been successfully completed. <br><br>The results are now available here : <a href="url">url</a><br>To stop receiving mail for the "currentproject" project, follow this link : disabledmaillink<br><br>Never give up ! <br>Tanaguru
 mail.auditEnd.subject = [Tanaguru] Audit completed
 mail.block.user.attempts.email = Multiple attempts to log into the account : 
 mail.block.user.attempts.username = Username : 
