--- a/tanaguru-rest/src/main/resources/messages_fr.properties
+++ b/tanaguru-rest/src/main/resources/messages_fr.properties
@@ -1,6 +1,6 @@
 mail.forgotPasswordSubject = [Tanaguru] Réinitialisation mot de passe
 mail.forgotPasswordContent = Vous demandez à Tanaguru de réinitialiser votre mot de passe, veuillez suivre ce lien : <a href="link">link</a> <br><br>Tanaguru
-mail.auditEnd.body = Félicitations ! <br><br>Votre audit du projet <strong> domain </strong> s'est terminé avec succès. <br><br>Les résultats sont dès à présent consultables ici : <a href="url">url</a> <br><br>Ne lâchez rien ! <br>Tanaguru
+mail.auditEnd.body = Félicitations ! <br><br>Votre audit du projet <strong> domain </strong> s'est terminé avec succès. <br><br>Les résultats sont dès à présent consultables ici : <a href="url">url</a><br>Pour ne plus recevoir de mail pour le projet "currentproject" suivez ce lien : disabledmaillink<br><br>Ne lâchez rien ! <br>Tanaguru
 mail.auditEnd.subject = [Tanaguru] Audit terminé
 mail.block.user.attempts.email = Multiples tentatives de connexions sur le compte : 
 mail.block.user.attempts.username = Nom d'utilisateur : 
