fix footer link

--- a/tanaguru-rest/src/main/resources/messages.properties
+++ b/tanaguru-rest/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 mail.forgotPasswordSubject = [Tanaguru] Reset password
 mail.forgotPasswordContent = <p>You ask Tanaguru to reset your password, please follow this link : <a href="link">link</a></p><p>Tanaguru</p>
-mail.auditEnd.body = <h2>Congratulations !</h2><p>Your project audit <strong>domain</strong> has been successfully completed.</p><p>The results are now available here : <a href="url">url</a></p><p>Never give up ! <br>Tanaguru</p><hr><p>To stop receiving mail for the "currentproject" project, follow this link : disabledmaillink</p>
+mail.auditEnd.body = <h2>Congratulations !</h2><p>Your project audit <strong>domain</strong> has been successfully completed.</p><p>The results are now available here : <a href="url">url</a></p><p>Never give up ! <br>Tanaguru</p><hr><p>To stop receiving mail for the "currentproject" project, follow this link : <a href="disabledmaillink">disabledmaillink</a></p>
 mail.auditEnd.subject = [Tanaguru] Audit completed
 mail.block.user.attempts.email = Multiple attempts to log into the account : 
 mail.block.user.attempts.username = Username : 
